2005-04-17  Per Bothner  <per@bothner.com>

	* configure.in (configure.in):  Support --with-java-source=4 and 4x.
	The default is now --with-java-source=4.
	Make -with-awt the default, even if --with-gcj.
	* Makefile.am (select-java4, select-java4x): New rules.
	(select-java-source): Handle '4' and '4x'.

	* Makefile.am (JEMACS_SUBDIRS): List gnu/jemacs subdirs rather than
	gnu/jemacs.  Move stuff from gnu/jemacs/Makefile.am.
	* configure.in (AC_CONFIF_FILES): Remove gnu/jemacs/Makefile.

2005-04-16  Per Bothner  <per@bothner.com>

	* NEWS: Remove file; replaced by html web-page
	http://www.gnu.org/software/kawa/news.html.
	* Makefile.am (instanll-html), README: Update accordingly.

2005-04-08  Per Bothner  <per@bothner.com>

	* kawa/standard/export.java (scanForDefinitions): Translate
	'namespace:NAME' to '$Namespace$NAME'.

2005-04-04  Per Bothner  <per@bothner.com>

	* Makefile.am (javadoc-cvs.log): New rule for updating javadoc.

2005-04-03  Per Bothner  <per@bothner.com>

	* Makefile.am (JAVADOC_PACKAGES): Add a number of new packages.
	(JAVADOC_FLAGS): Update - we use more memory, at least on jdk 1.4.
	(install-javadoc-html): Add extra jars to CLASSPATH, for newpackages -
	Eclipse, ant, and servlets.

	* kawa/MessageArea.java: Fix javadoc problem.

	* kawa/package.html: New file, for javadoc.
	* kawa/lang/package.html: Likewise.
	* kawa/standard/package.html: Likewise.

	* kawa/lang/SyntaxForm.java: Fix javadoc errors.
	* kawa/lang/SyntaxTemplate.java: Likewise.

2005-04-02  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (featureMap): Add 'srfi-64,'testing.

	* kawa/lang/Eval.java (evalBody): Save/set/restore current Compilation.

	* kawa/lang/Eval.java (eval): New static field.
	* kawa/standard/Scheme.java (repl): New static field.
	(initScheme): Use defProcStFld for 'eval' and 'repl'.

2005-03-31  Dean Ferreyra <dferreyra@igc.org>
	    Per Bothner  <per@bothner.com>

	* kawa/standard/module_static.java: Recognize (module-static 'init-run).
