@@ -1,3 +1,7 @@
+2005-04-18  Per Bothner  <per@bothner.com>
+
+	* kawa/standard/syntax.java (convert): Syntax fix for not-JAVA2.
+
 2005-04-17  Per Bothner  <per@bothner.com>
 
 	* configure.in (configure.in):  Support --with-java-source=4 and 4x.
